--- a/ecommerce-setup/package.json
+++ b/ecommerce-setup/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "passport": "^0.6.0"
   }
 }
